[package]
name = "twrp_evacuate"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[dependencies]
chrono = "0.4.38"
flate2 = "1.0.34"
indicatif = "0.17.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tar = "0.4.43"
